--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Logs
 logs
 *.log
@@ -128,3 +129,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+.idea
+node_modules
+.env
+.env.local
+.env.production
+
