--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "uuid": "^9.0.1"
   }
 }
